<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:id="@+id/group">
        <item android:title="@string/about_us_text"
            android:id="@+id/about_us"/>
    </group>

    <group android:id="@+id/group_2">
        <item android:title="@string/reservation_text"
            android:id="@+id/reservation"/>
    </group>

    <group android:id="@+id/group_3">
        <item android:title="@string/rules_text"
            android:id="@+id/rules" />
    </group>

    <group android:id="@+id/group_4">
        <item android:title="@string/privacy_policy_text"
            android:id="@+id/privacy_policy" />
    </group>

    <group android:id="@+id/group_5">
        <item android:title="@string/logout_text"
            android:id="@+id/logout"/>
    </group>

</menu>